# ergonomic-vulkan

./: .clang-format  CMakeLists.txt  README.md
include/: ergovk.hpp  ergovk_resources.hpp  ergovk_result.hpp  ergovk_structs.hpp
src/example/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  CommandPool.cpp  ErrorToString.cpp  FrameBuffer.cpp  RenderPass.cpp  RenderPassCreateInfo.cpp  Swapchain.cpp  VkImageHandle.cpp  VkImageViewHandle.cpp  VulkanInstance.cpp  VulkanInstanceBuilder.cpp
src/tests/: CMakeLists.txt  ErrorTests.cpp  ResourceSetTests.cpp  ResultTests.cpp
